--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Social Impact"
@@ -13,6 +13,32 @@
 
     <ListView
         android:id="@+id/listView1"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="1">
+    </ListView>
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Certifications"
+        android:textColor="#000000"
+        android:textSize="24sp" />
+    <ListView
+        android:id="@+id/listView2"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="1">
+    </ListView>
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Environmental Impact"
+        android:textColor="#000000"
+        android:textSize="24sp" />
+    <ListView
+        android:id="@+id/listView3"
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="1">
